[package]
name = "antmachine"
version = "0.1.0"
authors = ["Maxim Kuznetsov <maximxlssoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
pixels = "0.3.0"
rand = "0.8.3"
rayon = "1.5.1"
parking_lot = "0.11.1"
